Actualización de Desechados

--- a/src/main/java/gui/staff/jFrameManageRequests.form
+++ b/src/main/java/gui/staff/jFrameManageRequests.form
@@ -138,7 +138,7 @@
         <Component class="javax.swing.JTree" name="jTreeDisposedRequests">
           <Properties>
             <Property name="model" type="javax.swing.tree.TreeModel" editor="org.netbeans.modules.form.editors2.TreeModelEditor">
-              <TreeModel code="Disposed Requests&#xa;  New Accounts&#xa;    Old Age&#xa;      null&#xa;    Child Caring&#xa;      null&#xa;   Another&#xa;      null&#xa;  Subscriptions&#xa;   NightCaring&#xa;      null&#xa;   Daily&#xa;      null&#xa;   Weekly&#xa;      null&#xa;   Monthly&#xa;      null&#xa;   Yearly&#xa;      null"/>
+              <TreeModel code="Disposed Requests&#xa;  New Accounts&#xa;  Subscriptions&#xa;   Daily&#xa;   Weekly&#xa;   Monthly&#xa;   Yearly"/>
             </Property>
           </Properties>
         </Component>
