--- a/src/main/java/gui/client/jFrameMainMenu.form
+++ b/src/main/java/gui/client/jFrameMainMenu.form
@@ -33,7 +33,7 @@
                   <Component id="jButtonManageProfile" max="32767" attributes="0"/>
                   <Component id="jButtonSubscriptions" alignment="0" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace pref="134" max="32767" attributes="0"/>
+              <EmptySpace pref="99" max="32767" attributes="0"/>
           </Group>
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="32767" attributes="0"/>
@@ -75,7 +75,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="jButtonSubscriptions">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Reports"/>
+        <Property name="text" type="java.lang.String" value="Your subscriptions"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonSubscriptionsActionPerformed"/>
