Cosméticos a los botones
Botones de Cancelar Rojos y Aceptar Verdes.

--- a/src/main/java/gui/staff/administrator/jFrameAddStaff.form
+++ b/src/main/java/gui/staff/administrator/jFrameAddStaff.form
@@ -249,6 +249,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="jButtonAddStaff">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="0" green="cc" red="66" type="rgb"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Create"/>
       </Properties>
       <Events>
@@ -257,6 +260,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="jButtonCancel">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="0" green="0" red="ff" type="rgb"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Cancel"/>
       </Properties>
       <Events>
