--- a/src/main/java/gui/client/jFrameRegister.form
+++ b/src/main/java/gui/client/jFrameRegister.form
@@ -300,6 +300,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="jButtonAcceptRequest">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="0" green="cc" red="0" type="rgb"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Accept Request"/>
       </Properties>
       <Events>
@@ -370,6 +373,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="jButtonCancel">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="33" green="33" red="ff" type="rgb"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Cancel Request"/>
       </Properties>
       <Events>
