--- a/src/main/java/gui/staff/jFrameManageRequests.form
+++ b/src/main/java/gui/staff/jFrameManageRequests.form
@@ -146,11 +146,17 @@
     </Container>
     <Component class="javax.swing.JButton" name="jButtonDisposeElement">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="0" green="0" red="ff" type="rgb"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Dispose Element"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="jButtonApproveRequest">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="0" green="cc" red="33" type="rgb"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Approve Request"/>
       </Properties>
       <Events>
